force-app/main/default/objects/ucinn_portal_Content_Module__c/ucinn_portal_Content_Module__c.object-meta.xml
<CustomObject>
    <label>Content Module</label>
    <nameField>
        <label>Content Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>