force-app/main/default/objects/ucinn_portal_Content_Module__c/fields/Content_Module_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Content_Module_Metadata__c</fullName>
    <label>Content Module Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>