force-app/main/default/objects/ucinn_portal_Content_Module__c/fields/Content_Page__c.field-meta.xml
<CustomField>
    <fullName>Content_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Page</label>
    <referenceTo>ucinn_portal_Content_Page__c</referenceTo>
    <relationshipLabel>Content Modules</relationshipLabel>
    <relationshipName>ucinn_portal_Content_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>