force-app/main/default/objects/ucinn_portal_Content_Module__c/fields/Related_LWC__c.field-meta.xml
<CustomField>
    <fullName>Related_LWC__c</fullName>
    <label>Related LWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>